Change Notes
=============


2008-11-13	FLI
	Added an indention level for navigation providers. This allows to better customize the viewer
	when using multiple NavigationProviders, for example a Total and some Dimensions.