@@ -4,17 +4,17 @@
  <tr>
   <td width="22" valign="middle">
 #if($prev)
-  	<a href="$control.createActionURL("prev", "")"><img title="$prev.key" src="$jwic.contextPath/xwiccube/images/left_a.gif" border="0"></a>
+  	<a href="$control.createActionURL("prev", "")"><img title="$prev.key" src="$jwic.contextPath/xwiccube/images/resultset_previous.gif" border="0"></a>
 #else
-	<img src="$jwic.contextPath/xwiccube/images/left_i.gif" border="0">
+	<img src="$jwic.contextPath/xwiccube/images/resultset_previous_dis.gif" border="0">
 #end
   </td>
   <td valign="top">$control.getDimensionElement().path</td>
 <td width="22" valign="middle">
 #if($next)
-  <a href="$control.createActionURL("next", "")"><img title="$next.key" src="$jwic.contextPath/xwiccube/images/right_a.gif" border="0"></a>
+  <a href="$control.createActionURL("next", "")"><img title="$next.key" src="$jwic.contextPath/xwiccube/images/resultset_next.gif" border="0"></a>
 #else
-  <img src="$jwic.contextPath/xwiccube/images/right_i.gif" border="0">
+  <img src="$jwic.contextPath/xwiccube/images/resultset_next_dis.gif" border="0">
 #end
 </td>
  </tr>
