@@ -1,4 +1,4 @@
-<table>
+<table class="xcube-filter">
 #if($control.selectMeasure)
 	<tr>
 		<td>Measure</td>
